--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -15,8 +15,17 @@
   display: flex;
   align-items: center;
   margin: 0px;
-  column-gap: 30px;
+  column-gap: 40px;
 }
 
 .nav__link {
+  color: #f1e8e8;
+  text-decoration: none;
+  font-size: 30px;
+  line-height: 1;
+}
+
+.nav__link:hover {
+  opacity: 0.5;
+  transition-duration: 0.4s;
 }
