--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,13 @@
 .page {
-  width: 100%;
+  max-width: 100%;
   min-height: 100vh;
   height: 4200px;
   background: linear-gradient(#272169, #2d2583, #2d2584, #28216d);
   font-family: "Red Hat Display", Arial, Helvetica, sans-serif;
   font-weight: 500;
+  font-size: 24px;
+  color: #f1e8e8;
+  padding: 50px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
