--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,5 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/page.css);
 @import url(../blocks/nav.css);
+@import url(../blocks/about-me.css);
+@import url(../blocks/languages-and-tools.css);
