feat: add anchor tags/shortcut for nav links

--- a/blocks/about-me.css
+++ b/blocks/about-me.css
@@ -1,25 +1,34 @@
 .about-me {
   padding: 40px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
 }
 
+.about-me__heading {
+  padding-left: 10px;
+}
+
+.about-me__content {
+  display: flex;
+  flex-direction: row;
+}
+
 .about-me__image-container {
-  height: 413px;
-  width: 413px;
+  height: 450px;
+  width: 450px;
   object-fit: cover;
   border: none;
 }
 
 .about-me__image {
-  height: 413px;
-  width: 413px;
+  height: 450px;
+  width: 450px;
   object-fit: cover;
   object-position: bottom;
-  border-radius: 10%;
+  border-radius: 10px;
 }
 
 .about-me__description {
-  padding-left: 60px;
+  padding-left: 40px;
 }
