add sections headings

--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,4 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/about-me.css);
 @import url(../blocks/languages-and-tools.css);
+@import url(../blocks/projects.css);
