--- a/blocks/languages-and-tools.css
+++ b/blocks/languages-and-tools.css
@@ -1,10 +1,11 @@
 .languages-and-tools {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
   padding: 40px;
 }
 
-.languages-and-tools__icons {
+.languages-and-tools__icon {
   width: 70px;
   height: 70px;
 }
