--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,7 @@
   align-items: center;
   padding: 0 20px;
   transition: visibility 0s linear 0.4s, opacity 0.4s linear;
+  color: #3b3b3b;
 }
 
 .modal_open {
@@ -24,6 +25,7 @@
   background-color: #cccccc;
   position: relative;
   border-radius: 12px;
+  padding: 70px;
 }
 
 .modal__close-btn {
@@ -31,7 +33,21 @@
   height: 40px;
   width: 40px;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
   border: none;
+}
+
+.modal__close-btn:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.modal__heading {
+  text-decoration: underline;
+  font-size: 2vw;
+}
+
+.modal__text {
+  font-size: 1.5vw;
 }
