--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,12 +11,15 @@
   justify-content: center;
   align-items: center;
   padding: 0 20px;
-  transition: visibility 0s linear 0.4s, opacity 0.4s linear;
   color: #3b3b3b;
+  opacity: 0;
+  transition: visibility 0s linear 0.4s, opacity 0.4s linear;
 }
 
 .modal_open {
   visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
@@ -50,4 +53,13 @@
 
 .modal__text {
   font-size: 1.5vw;
+}
+
+.modal__languages-and-tools-icon {
+  width: 5vw;
+}
+
+.modal__list-item {
+  list-style-type: square;
+  font-size: 1.3vw;
 }
