--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -24,12 +24,11 @@
 
 .modal__container {
   width: 50vw;
-  height: 70vh;
+  height: fit-content;
   background-color: #cccccc;
   position: relative;
   border-radius: 12px;
   padding: 70px;
-  max-height: fit-content;
 }
 
 .modal__close-btn {
@@ -50,13 +49,13 @@
 
 .modal__heading {
   text-decoration: underline;
-  font-size: 28px;
+  font-size: 26px;
   margin-bottom: 20px;
   margin-top: 0;
 }
 
 .modal__text {
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.4;
   text-align: justify;
   margin: 0;
