--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,9 @@
 .nav {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  height: 2rem;
+  padding: 1rem;
 }
 
 .nav__btns-list {
