--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,16 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding-bottom: 30px;
+  padding: 0 0 1rem;
+  color: #96908a;
+  position: relative;
 }
 
 .header__title {
   margin: 0;
   padding: 0;
   font-size: 1.7rem;
+  text-decoration: underline;
 }
 
 /* @media screen and (max-width: 700px) {
