--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,18 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+}
+
 .main {
-  display: grid;
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main > * {
+  height: 100vh;
+  scroll-snap-align: start;
 }
