--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,14 +3,14 @@
   justify-content: flex-end;
   align-items: center;
   height: 2rem;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
 }
 
 .nav__btns-list {
   display: flex;
   justify-content: center;
   padding: 0;
-  gap: 1rem;
+  gap: 1.2rem;
   margin: 0;
 }
 
@@ -19,17 +19,17 @@
 }
 
 .nav__btn {
-  padding: 8px;
-  border: 1.5px solid #5d4b4b;
-  border-radius: 4px;
-  background-color: #a18888f0;
-  color: #d5d5d5;
+  border: none;
+  color: #804f45;
   text-decoration: none;
+  display: inline-block;
+  font-size: 1.1rem;
 }
 
 .nav__btn:hover {
   opacity: 0.8;
   cursor: pointer;
+  transform: scale(1.07);
 }
 
 /* @media screen and (max-width: 700px) {
