--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -14,28 +14,29 @@
 .portfolio__title {
   margin: 0 0 20px;
   text-decoration: underline;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .portfolio__list {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
-  margin: 0 0 0 1rem;
+  gap: 1.3rem;
+  margin: 0;
   padding: 0;
-}
-
-.portfolio__list-item {
+  list-style: none;
 }
 
 .portfolio__list-link {
+  display: inline-block;
   color: #d5d5d5;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 .portfolio__list-link:hover {
   opacity: 0.7;
+  transform: scale(1.02);
+  cursor: pointer;
 }
 
 .portfolio__list-link:visited {
@@ -45,4 +46,10 @@
 .portfolio__project-name {
   text-decoration: underline;
   text-decoration-thickness: 2px;
+  color: #252528;
+}
+
+.portfolio__project-description {
+  font-size: 0.9rem;
+  margin: 0.2rem 0 0;
 }
