--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,11 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+
 .page {
   width: 100%;
   min-height: 100vh;
@@ -10,4 +18,15 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   color: #d5d5d5;
+  position: relative;
+}
+
+.page__snap-section {
+  height: 100vh;
+  scroll-snap-align: start;
+  position: relative;
+}
+
+.page__footer {
+  scroll-snap-align: none;
 }
