--- a/src/components/BackToTopBtn/BackToTopBtn.css
+++ b/src/components/BackToTopBtn/BackToTopBtn.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 30px;
   left: 50%;
+  transform: translateX(-50%);
   padding: 10px 14px;
   background-color: #5d4b4b;
   border: none;
@@ -15,5 +16,5 @@
 
 .back-to-top:hover {
   opacity: 1;
-  transform: scale(1.05);
+  transform: translateX(-50%) scale(1.05);
 }
