--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,36 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   padding: 40px;
   background-color: #96908a;
+  height: auto;
+  scroll-snap-align: none;
+  font-size: 0.8rem;
+}
+
+.footer__contact-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__contact-header {
+  margin: 0;
+}
+
+.footer__contact-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__contact-link {
+  color: #d5d5d5;
+}
+
+.footer__contact-link:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .footer__author {
