--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 40px;
@@ -46,8 +47,27 @@
   margin: 0;
 }
 
-@media screen and (max-width: 725px) {
+@media screen and (max-width: 760px) {
   .footer {
-    padding: 16px 0 0;
+    padding: 30px;
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer__contact-container {
+    padding: 0 0 0.4rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .footer {
+    padding: 1rem;
+    font-size: 0.6rem;
   }
 }
