--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,6 @@
   align-items: center;
   margin: 0;
   padding: 0 0 1rem;
-  /* color: #96908a; */
   position: relative;
 }
 
@@ -15,6 +14,26 @@
   text-decoration: underline;
 }
 
-/* @media screen and (max-width: 700px) {
-  
-} */
+@media screen and (max-width: 980px) {
+  .header {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  .header__title {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .header__title {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .header__title {
+    font-size: 1.1rem;
+  }
+}
