fix back to top button translate mobile view

--- a/src/components/BackToTopBtn/BackToTopBtn.css
+++ b/src/components/BackToTopBtn/BackToTopBtn.css
@@ -25,6 +25,10 @@
     right: 30px;
     transform: none;
   }
+
+  .back-to-top:hover {
+    transform: scale(1.03);
+  }
 }
 
 @media screen and (max-width: 425px) {
