--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -67,7 +67,7 @@
 
 @media screen and (max-width: 425px) {
   .footer {
-    padding: 1rem;
+    padding: 2rem 1rem;
     font-size: 0.6rem;
   }
 }
