add experience section

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px;
-  background-color: #96908a;
+  background-color: #252528;
   height: auto;
   scroll-snap-align: none;
   font-size: 0.8rem;
