--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,6 +1,6 @@
 .about-me {
   margin: 0;
-  padding: 1rem 1.5rem 5.5rem;
+  padding: 1rem 3rem 5.5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -37,9 +37,9 @@
   line-height: 1.3;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1120px) {
   .about-me {
-    padding: 1rem 1.5rem 6rem;
+    padding: 1rem 3rem 6rem;
   }
 
   .about-me__image-container {
@@ -52,12 +52,12 @@
   }
 }
 
-@media screen and (max-width: 890px) {
+@media screen and (max-width: 1020px) {
   .about-me {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem 2rem 5rem;
+    padding: 1rem 3rem 4rem;
   }
 
   .about-me__text {
@@ -78,20 +78,14 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 840px) {
   .about-me {
     padding: 1rem 2rem 4rem;
   }
 
   .about-me__image-container {
-    width: 250px;
-    height: 250px;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .about-me {
-    padding: 0 2rem 4rem;
+    width: 230px;
+    height: 230px;
   }
 
   .about-me__title {
@@ -99,44 +93,63 @@
   }
 
   .about-me__paragraph {
-    font-size: 0.75rem;
-  }
-
-  .about-me__image-container {
-    width: 230px;
-    height: 230px;
+    font-size: 0.7rem;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 770px) {
   .about-me {
-    padding: 0 2rem 3.5rem;
+    padding: 0.5rem 2rem 2rem;
+  }
+
+  .about-me__paragraph {
+    font-size: 0.65rem;
   }
 
   .about-me__image-container {
-    width: 220px;
-    height: 220px;
+    width: 190px;
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .about-me {
+    padding: 0.5rem 2rem 2rem;
+  }
+
+  .about-me__title {
+    font-size: 0.9rem;
+    margin: 0.6rem 0;
+  }
+
+  .about-me__paragraph {
+    font-size: 0.6rem;
+  }
+
+  .about-me__image-container {
+    width: 180px;
+    height: 180px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .about-me__title {
-    font-size: 0.9rem;
-    margin: 15px 0;
+    font-size: 0.8rem;
   }
 
-  .about-me__paragraph {
-    font-size: 0.7rem;
+  .about-me__image-container {
+    width: 160px;
+    height: 160px;
   }
 }
 
 @media screen and (max-width: 375px) {
-  .about-me__image-container {
-    width: 220px;
-    height: 220px;
+  .about-me__paragraph {
+    font-size: 0.5rem;
   }
 
-  .about-me__paragraph {
-    font-size: 0.6rem;
+  .about-me__image-container {
+    width: 130px;
+    height: 130px;
   }
 }
