--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
   height: auto;
   scroll-snap-align: none;
   font-size: 0.8rem;
-  border-top: 0.3rem solid #804f45;
+  /* border-top: 0.3rem solid #804f45; */
 }
 
 .footer__contact-container {
