--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: #889fb1;
-  color: #252528;
+  color: #d5d5d5;
 }
 
 .education__title {
