--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -32,6 +32,38 @@
   transform: scale(1.07);
 }
 
+.nav__mobile {
+  position: relative;
+}
+
+.nav__mobile-dropdown {
+  position: absolute;
+  right: 0;
+  top: 3rem;
+  background: #d5d5d5;
+  padding: 1rem;
+  border-radius: 7px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  z-index: 1000;
+  text-align: left;
+  width: 5rem;
+}
+
+.nav__mobile-dropdown a {
+  text-decoration: none;
+  color: black;
+  font-size: 0.8rem;
+}
+
+.nav__mobile-dropdown-divider {
+  border: none;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 0.5rem 0;
+}
+
 @media screen and (max-width: 770px) {
   .nav__btn {
     font-size: 0.9rem;
@@ -55,5 +87,22 @@
 @media screen and (max-width: 550px) {
   .nav__btn {
     font-size: 0.65rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .nav {
+    height: auto;
+    padding: 1rem;
+    position: relative;
+  }
+
+  .nav__mobile-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 44px;
+    height: 44px;
+    z-index: 1000;
   }
 }
